--- a/templates/main/quiz_list.html
+++ b/templates/main/quiz_list.html
@@ -3,15 +3,21 @@
 {% block title %}Вікторини{% endblock %}
 
 {% block content %}
-<h1 class="mb-4">Вікторини:</h1>
+<h2>{{ welcome_text }}</h2>
+<a href="{% url 'create_quiz' %}" class="btn btn-primary mb-3">Створити нову вікторину</a>
 <ul class="list-group">
   {% for quiz in quizzes %}
     <li class="list-group-item d-flex justify-content-between align-items-center">
       {{ quiz.title }}
-      <a href="{% url 'start_quiz' quiz.id %}" class="btn btn-primary btn-sm">Розпочати</a>
+      <div>
+        <a href="{% url 'start_quiz' quiz.id %}" class="btn btn-success btn-sm">Пройти</a>
+        {% if quiz.creator == user %}
+          <a href="{% url 'delete_quiz' quiz.id %}" class="btn btn-danger btn-sm">Видалити</a>
+        {% endif %}
+      </div>
     </li>
   {% empty %}
-    <li class="list-group-item">Вікторини відсутні</li>
+    <li class="list-group-item">Поки що немає вікторин</li>
   {% endfor %}
 </ul>
 {% endblock %}
