--- a/templates/main/create_quiz.html
+++ b/templates/main/create_quiz.html
@@ -4,9 +4,18 @@
 
 {% block content %}
 <h2>Створити вікторину</h2>
+
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit" class="btn btn-success">Створити вікторину</button>
+
+  <button type="submit" class="btn btn-success">
+      Створити вікторину
+  </button>
+
+  <a href="{% url 'quiz_list' %}" class="btn btn-secondary">
+      Назад
+  </a>
 </form>
+
 {% endblock %}
